* Creating swagger annotations for verify email function
